--- a/DateIt.WP/Resources/AppResources.resx
+++ b/DateIt.WP/Resources/AppResources.resx
@@ -128,6 +128,9 @@
   <data name="ApplicationTitle" xml:space="preserve">
     <value>MY APPLICATION</value>
   </data>
+  <data name="SampleProperty" xml:space="preserve">
+    <value>Sample Runtime Property Value</value>
+  </data>
   <data name="AppBarButtonText" xml:space="preserve">
     <value>add</value>
   </data>
